Do not create a device if gst initializazion fails

Currently we create a device with empty caps if the probing pipeline
cannot be started. That's wrong, the device evidendtly doesn't work so
the CheeseCameraDevice object for doesn't have to be created.

https://bugzilla.gnome.org/show_bug.cgi?id=618203